# BestHackathon3

./: index.html  readme.md  styles.css
Lucas/js/: craptcha.js  craptchaSuccess.js  keyRemap.js  passwordGame.js  passwordGameSuccess.js  speedTest.js  speedTestSuccess.js
Lucas/pages/: craptcha.html  craptchaSuccess.html  keyRemap.html  keyRemapSuccess.html  passwordGameSuccess.html  speedTest.html  speedTestSuccess.html
Lucas/styles/: craptcha.css  craptchaSuccess.css  keyRemap.css  passwordGameSuccess.css  speedTest.css
MainPage/: index.html  rules.css  rules.html  style.css
ananas/aoc/: index.html  input.txt  script.js
ananas/frag1/: generate_input.py  index.html  script.js  test.py
ananas/frag2/: Cargo.toml  denis-worker.js  index.html  script.js
ananas/frag2/src/: lib.rs  search.rs  transposition.rs
ant_code/image_obsfucation/: image_data_encoding.ipynb  image_data_encoding.py
ant_code/sound_offuscation/: decode_with_FFT.ipynb  encode data.ipynb  fft_learning.ipynb  fft_learning_2.ipynb  mp3_to_wav.py  sound-encoding.ipynb  sound_manipulation.ipynb  test.py
aoc/: index.html  script.js
chess/: Cargo.toml  chess.js  denis-worker.js  script.js
chess/pkg/: pablo.d.ts  pablo.js  pablo_bg.wasm  pablo_bg.wasm.d.ts  package.json
chess/src/: com.rs  eval.rs  lib.rs  search.rs
contact-us/: game_uncrypted.py  reward.txt
horse/: index.html
nowi's code/: cypher.py  game.py  game_crypted.py  game_uncrypted.py  hi-there.defnitelynotjpg
rules/: index.html
sign-in/js/: craptcha.js  craptchaSuccess.js  keyRemapSuccess.js  (+2 more)
sus/: index.html
(+9 files in other folders)
