[package]
name = "pablo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chess = "3.2.0"
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
[dependencies.web-sys]
version = "0.3.4"
features = [
    'Node',
    'Document',
    'HtmlElement',
    'MessageEvent',
    'Window',
    'Worker',
    'console',
]

[profile.release]
opt-level = "s"