[package]
name = "pablo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chess = "3.2.0"
wasm-bindgen = "0.2"
[dependencies.web-sys]
version = "0.3.4"
features = [
    'Node',
    'Document',
    'HtmlElement',
    'MessageEvent',
    'Window',
    'Worker',
]

[profile.release]
opt-level = "s"